--- a/src/components/common/ItemDetail.css
+++ b/src/components/common/ItemDetail.css
@@ -1,25 +1,34 @@
-.card {
-  display: flex;
-  flex-direction: column; /* Alinea el contenido en columnas */
-  justify-content: center; /* Centra verticalmente el contenido */
-  align-items: center; /* Centra horizontalmente el contenido */
-  border: 5px solid violet; /* Cambia el color del borde a violeta */
-  margin: 10px; /* Espacio entre las tarjetas */
-  padding: 20px; /* Espacio dentro de cada tarjeta */
-  width: 300px;
-  height: 450px;
-  background-image: url(https://i.gifer.com/4pwn.gif);
-  background-size: cover;
-}
 
-.card-title {
-  font-size: 42px;
-  color: white;
-}
-.card-text {
-  font-size: 25px;
-  color: #fafafa;
-}
+  .card-body {
+    display: flex;
+    flex-direction: column; /* Alinea el contenido en columnas */
+    justify-content: center; /* Centra verticalmente el contenido */
+    align-items: center; /* Centra horizontalmente el contenido */
+    border: 5px solid #fdbb09; /* Cambia el color del borde a violeta */
+    margin: 10px; /* Espacio entre las tarjetas */
+    padding: 20px; /* Espacio dentro de cada tarjeta */
+    background-image: url(https://res.cloudinary.com/doackpmhu/image/upload/v1711235344/5e4bc469-96f7-4dc6-abd8-3cd3226919b9_ysdac9.jpg);
+    background-size: cover;
+    text-align: center;
+  }
+  
+  .card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Ajusta el ancho mínimo y máximo de las columnas */
+    gap: 20px; /* Espacio entre las tarjetas */
+    justify-items: center; /* Centra horizontalmente los elementos en las columnas */
+  }
+  
+  .card-title {
+    font-size: 42px;
+    color: white;
+  }
+  
+  .card-text {
+    font-size: 25px;
+    color: #fafafa;
+  }
+  
 
 
 /* Agrega más estilos según sea necesario */
